tests/parsing/invalid/inst_prop_conflict/bus.fbd
Main bus
	Cfg config
		width = 2
		range = [0, 10]
